tests/restrict-github-team-external-identity/other-identity/user-info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: other-identity
userInfo:
  username: system:serviceaccount:flux-system:kustomize-controller
  groups:
    - system:serviceaccounts
    - system:serviceaccounts:flux-system
    - system:authenticated
